test/expected/explain_f_ai.out
explain int f()[]
               ^
16: error: function returning array; did you mean function returning pointer?
